<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_course"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="exampleoncreatingfixedfragment.example.com.androidproject.Doctor.AddCourseActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/course_num_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_course_num" />

        <EditText
            android:id="@+id/course_name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_course_name" />

        <EditText
            android:id="@+id/course_point_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_course_point" />

        <EditText
            android:id="@+id/course_semster_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_course_semster" />

        <Button
            android:id="@+id/course_add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_course"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>
