<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup_doctor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="exampleoncreatingfixedfragment.example.com.androidproject.Doctor.SignupDoctorActivity">

    <include layout="@layout/app_bar" android:id="@id/app_bar"/>

    <LinearLayout
        android:layout_below="@id/app_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/f_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_height_et"
                android:layout_weight="1"
                android:paddingTop="@dimen/edit_text_detail_course_padding_top"
                android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/txt_hint_first_name" />

            <EditText
                android:id="@+id/l_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_height_et"
                android:layout_weight="1"
                android:paddingTop="@dimen/edit_text_detail_course_padding_top"
                android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
                android:hint="@string/txt_hint_last_name"/>

        </LinearLayout>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_height="@dimen/layout_height_et"
            android:paddingTop="@dimen/edit_text_detail_course_padding_top"
            android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
            android:hint="@string/txt_hint_username" />
        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/edit_text_detail_course_padding_top"
            android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
            android:hint="@string/txt_hint_phone_number" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/edit_text_detail_course_padding_top"
            android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
            android:hint="@string/txt_hint_address" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/edit_text_detail_course_padding_top"
            android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
            android:hint="@string/txt_hint_password" />

        <Button
            android:id="@+id/signup_btn_doctor_activity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:text="@string/btn_signup"
            android:textAllCaps="false"/>
    </LinearLayout>

</RelativeLayout>
