<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_doctor_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="exampleoncreatingfixedfragment.example.com.androidproject.Doctor.DoctorProfileActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/f_name_doctor_profile"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_height_et"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:hint="@string/txt_hint_first_name"
                android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
                android:paddingTop="@dimen/edit_text_detail_course_padding_top"
                android:textColorHint="#000" />

            <EditText
                android:id="@+id/l_name_doctor_profile"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_height_et"

                android:layout_weight="1"
                android:hint="@string/txt_hint_last_name"
                android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
                android:paddingTop="@dimen/edit_text_detail_course_padding_top" />

        </LinearLayout>

        <EditText
            android:id="@+id/username_doctor_profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/txt_hint_username"
            android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
            android:paddingTop="@dimen/edit_text_detail_course_padding_top" />

        <EditText
            android:id="@+id/phonenumber_doctor_profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/txt_hint_phone_number"
            android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
            android:paddingTop="@dimen/edit_text_detail_course_padding_top" />

        <EditText
            android:id="@+id/address_doctor_profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/txt_hint_address"
            android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
            android:paddingTop="@dimen/edit_text_detail_course_padding_top" />

        <EditText
            android:id="@+id/password_doctor_profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/txt_hint_password"
            android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
            android:paddingTop="@dimen/edit_text_detail_course_padding_top" />

        <Button
            android:id="@+id/update_btn_doctor_profile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/btn_update"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>
