<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="exampleoncreatingfixedfragment.example.com.androidproject.Student.SignupStudentActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/f_name_student_signup"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_height_et"

                android:layout_weight="1"
                android:hint="@string/txt_hint_first_name"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
                android:paddingTop="@dimen/edit_text_detail_course_padding_top" />

            <EditText
                android:id="@+id/l_name_student_signup"
                android:layout_width="0dp"
                android:layout_height="@dimen/layout_height_et"
                android:layout_weight="1"
                android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
                android:paddingTop="@dimen/edit_text_detail_course_padding_top"
                android:hint="@string/txt_hint_last_name" />
        </LinearLayout>

        <EditText
            android:id="@+id/username_student_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
            android:paddingTop="@dimen/edit_text_detail_course_padding_top"
            android:layout_marginTop="@dimen/radio_button_margin_top"
            android:hint="@string/txt_hint_username" />

        <EditText
            android:id="@+id/phone_numebr_student_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
            android:paddingTop="@dimen/edit_text_detail_course_padding_top"
            android:layout_marginTop="@dimen/radio_button_margin_top"
            android:hint="@string/txt_hint_phone_number" />

        <EditText
            android:id="@+id/password_student_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/edit_text_detail_course_padding_left"
            android:paddingTop="@dimen/edit_text_detail_course_padding_top"
            android:layout_marginTop="@dimen/radio_button_margin_top"
            android:hint="@string/txt_hint_password" />

        <Button
            android:id="@+id/signup_btn_student_activity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_et"
            android:text="@string/btn_signup" />
    </LinearLayout>

</RelativeLayout>
