<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="exampleoncreatingfixedfragment.example.com.androidproject.LoginActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/login_linears_padding">

        <TextView
            android:id="@+id/indicator_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_indicator"
            android:gravity="center"
            android:textSize="32sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/student_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:text="@string/btn_student_nav"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/doctor_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:text="@string/btn_doctor_nav"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/doctor_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <EditText
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/doctor_username_txt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_et"
                android:hint="@string/txt_hint_username"
                android:layout_gravity="center"
                android:gravity="center"/>

            <EditText
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/doctor_password_txt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_et"
                android:hint="@string/txt_hint_password"
                android:layout_gravity="center"
                android:gravity="center"/>

            <Button
                android:id="@+id/doctor_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_login"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:gravity="center"/>

            <TextView
                android:id="@+id/doctor_tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_signup"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/student_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/student_username_txt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_et"
                android:gravity="center"
                android:hint="@string/txt_hint_username" />

            <EditText
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/student_password_txt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_et"
                android:gravity="center"
                android:hint="@string/txt_hint_password" />

            <Button
                android:id="@+id/student_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/btn_login"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/student_tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tv_signup" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
